Add greeting id and update events button link

--- a/first-edition/index.html
+++ b/first-edition/index.html
@@ -38,11 +38,11 @@
         <!-- END MEC HEADER -->
 
         <!-- MEC INTRODUCTION WITH BACKGROUND -->
-        <div class="greeting" section="image-section">
+        <div class="greeting" section="image-section" id="mec-introduction">
             <img src="MEC extended logo.png" class="greeting-main-image" alt="MEC - MIT Entrepreneurship Club">
             <p class="greeting-tag">MIT's Premier Undergraduate Entrepreneurship Club</p>
 
-            <a href="for-members/index.html" class="button-link" id="see-upcoming-events-main-page">
+            <a href="resources/index.html#upcoming-events" class="button-link" id="see-upcoming-events-main-page">
                 <p class="button-text" id="events-button">
                     See Upcoming Events
                 </p>
