--- a/first-edition/resources/index.html
+++ b/first-edition/resources/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="index.css">
         <title>MIT Entrepreneurship Club - Resources</title>
         <meta name="description" content="MEC's Events and Links to MIT-based Entrepreneurial Organizations">
-        <link rel="icon" type="image/png" href="MEC airplane.png">
+        <link rel="icon" type="image/png" href="../MEC airplane.png">
     </head>
 
     <body>
@@ -107,73 +107,73 @@
             <h1 class="heading-large">Resources</h1>
             <h2 class="heading-small">Click to view resource websites!</h2>
             <div id="resources-grid">
-                <a href="INSERT_LINK_HERE" class="resource-link">
+                <a href="https://orbit.mit.edu" class="resource-link">
                     <div class="resource">
                         <h3 class="heading-medium resource-title">Orbit</h3>
                         <p class="resource-description">one-stop shop of e-ship resources for MIT students</p>
                     </div>
                 </a>
-                <a href="INSERT_LINK_HERE" class="resource-link">
+                <a href="https://innovation.mit.edu/resource/startmit/" class="resource-link">
                     <div class="resource">
                         <h3 class="heading-medium resource-title">StartMIT</h3>
                         <p class="resource-description">intro to entrepreneurship program during IAP</p>
                     </div>
                 </a>
-                <a href="INSERT_LINK_HERE" class="resource-link">
+                <a href="https://entrepreneurship.mit.edu/mit-fuse/" class="resource-link">
                     <div class="resource">
                         <h3 class="heading-medium resource-title">MIT Fuse</h3>
                         <p class="resource-description">micro accelerator program during IAP</p>
                     </div>
                 </a>
-                <a href="INSERT_LINK_HERE" class="resource-link">
+                <a href="https://entrepreneurship.mit.edu/accelerator/program/" class="resource-link">
                     <div class="resource">
                         <h3 class="heading-medium resource-title">Delta V</h3>
                         <p class="resource-description">MIT's main student venture accelerator</p>
                     </div>
                 </a>
-                <a href="INSERT_LINK_HERE" class="resource-link">
+                <a href="https://entrepreneurship.mit.edu/t0/" class="resource-link">
                     <div class="resource">
                         <h3 class="heading-medium resource-title">t=0</h3>
                         <p class="resource-description">annual festival for e-ship and innovation</p>
                     </div>
                 </a>
-                <a href="INSERT_LINK_HERE" class="resource-link">
+                <a href="https://entrepreneurship.mit.edu/" class="resource-link">
                     <div class="resource">
                         <h3 class="heading-medium resource-title">MTC</h3>
                         <p class="resource-description">Martin Trust Center for MIT Entrepreneurship</p>
                     </div>
                 </a>
-                <a href="INSERT_LINK_HERE" class="resource-link">
+                <a href="https://ihq.mit.edu/" class="resource-link">
                     <div class="resource">
                         <h3 class="heading-medium resource-title">iHQ</h3>
                         <p class="resource-description">innovation center located in the heart of Kendall Square</p>
                     </div>
                 </a>
-                <a href="INSERT_LINK_HERE" class="resource-link">
+                <a href="https://pkgcenter.mit.edu/" class="resource-link">
                     <div class="resource">
                         <h3 class="heading-medium resource-title">PKG Center</h3>
                         <p class="resource-description">experiences and programs for public service</p>
                     </div>
                 </a>
-                <a href="INSERT_LINK_HERE" class="resource-link">
+                <a href="https://entrepreneurship.mit.edu/entrepreneurship-internship/" class="resource-link">
                     <div class="resource">
                         <h3 class="heading-medium resource-title">Pozen Fellowship</h3>
                         <p class="resource-description">summer internship program with MIT-affiliated startup</p>
                     </div>
                 </a>
-                <a href="INSERT_LINK_HERE" class="resource-link">
+                <a href="https://sandbox.mit.edu/" class="resource-link">
                     <div class="resource">
                         <h3 class="heading-medium resource-title">MIT Sandbox</h3>
                         <p class="resource-description">funding/guidance for student projects/ventures</p>
                     </div>
                 </a>
-                <a href="INSERT_LINK_HERE" class="resource-link">
+                <a href="https://innovation.mit.edu/resource/startlabs/" class="resource-link">
                     <div class="resource">
                         <h3 class="heading-medium resource-title">StartLabs</h3>
                         <p class="resource-description">club for exploration of e-ship</p>
                     </div>
                 </a>
-                <a href="INSERT_LINK_HERE" class="resource-link">
+                <a href="https://entrepreneurship.mit.edu/courses/" class="resource-link">
                     <div class="resource">
                         <h3 class="heading-medium resource-title">E-ship Classes</h3>
                         <p class="resource-description">learn about principles of e-ship with MIT professors</p>
@@ -222,7 +222,7 @@
 
                     <div class="links-4">
                         <a href="../for-members/index.html">For Members</a>
-                        <a href="../resources/index.html">E-Ship Resources</a>
+                        <a href="../resources/index.html#resources">E-Ship Resources</a>
                         <a href="../blog/index.html">Blog</a>
                         <a href="../contact-us/index.html">Contact Us</a>
                     </div>
