Update resource footer link

--- a/first-edition/index.html
+++ b/first-edition/index.html
@@ -198,7 +198,7 @@
 
                     <div class="links-4">
                         <a href="for-members/index.html">For Members</a>
-                        <a href="resources/index.html">E-Ship Resources</a>
+                        <a href="resources/index.html#resources">E-Ship Resources</a>
                         <a href="blog/index.html">Blog</a>
                         <a href="contact-us/index.html">Contact Us</a>
                     </div>
