Edit some links and references

--- a/first-edition/index.html
+++ b/first-edition/index.html
@@ -121,7 +121,7 @@
                 <a href="join-us/index.html" class="button-link">
                     <p class="button-text" id="join-us-button">Join MEC</p>
                 </a>
-                <a href="resources/index.html" class="button-link">
+                <a href="resources/index.html#upcoming-events" class="button-link">
                     <p class="button-text" id="attend-events-button">Attend E-Ship Events</p>
                 </a>
                 <a href="blog/index.html" class="button-link">
