--- a/first-edition/coming-soon.html
+++ b/first-edition/coming-soon.html
@@ -39,7 +39,7 @@
 
         <!-- COMING SOON -->
         <div id="coming-soon">
-            The resources you are looking for is coming soon!
+            The resource you are looking for is coming soon!
         </div>
         <!-- END COMING SOON -->
 
