Insert coming soon links

--- a/first-edition/startup-fair/index.html
+++ b/first-edition/startup-fair/index.html
@@ -42,10 +42,10 @@
             <p>Opportunities in Entrepreneurship</p>
             <h1 class="header-jumbo">MIT's First Startup Career Fair</h1>
             <div id="button-row">
-                <a href="SPONSOR_LINK" class="button-link">
+                <a href="../coming-soon.html" class="button-link">
                     <p class="button-text">Become a Sponsor</p>
                 </a>
-                <a href="JOIN_STARTUP_FAIR_LINK" class="button-link">
+                <a href="../coming-soon.html" class="button-link">
                     <p class="button-text">Students: Join Career Fair</p>
                 </a>
             </div>
@@ -117,13 +117,13 @@
             <p>We will help you access a vast pool of talent at MIT. Startups partner with 
                 MEC to participate in the MEC Startup Career Fair (April) and organize 
                 tailored events with us on campus to connect with students. Check out 
-                our <a href="INSERT_LINK" id="sponsorship-document-link" class="startup-sponsor-link">sponsorship document</a> 
+                our <a href="../coming-soon.html" id="sponsorship-document-link" class="startup-sponsor-link">sponsorship document</a> 
                  for more details. If interested, complete the interest form below and we will 
                  reach out to you soon! And if you have any remaining questions, please contact 
                  our Sponsorship and Financials Lead, <a href="WHAT" class="startup-sponsor-link">Gyalpo Dongo</a>.
             </p>
 
-            <a href="SOMETHING" class="button-link">
+            <a href="../coming-soon.html" class="button-link">
                 <p class="button-form">Complete Interest Form</p>
             </a>
         </div>
@@ -138,7 +138,7 @@
                 full-time positions, and part-time positions. Any student interested in 
                 exploring entrepreneurship or working at a startup can apply! Fill 
                 out the interest form below to get updates for the startup fair! If you 
-                have any questions, contact our MIT Events Lead, <a href="WHAT" class="startup-sponsor-link">Qudus Shittu</a>.
+                have any questions, contact our MIT Events Lead, <a href="../coming-soon.html" class="startup-sponsor-link">Qudus Shittu</a>.
             </p>
 
             <p>Consider working at a startup!</p>
@@ -152,7 +152,7 @@
                 <li>Work On Projects You're Passionate About</li>
             </ol>
 
-            <a href="INTEREST FORM" class="button-link">
+            <a href="../coming-soon.html" class="button-link">
                 <p class="button-text">Complete Interest Form</p>
             </a>
         </div>
