Correct missed coming-soon.html

--- a/first-edition/startup-fair/index.html
+++ b/first-edition/startup-fair/index.html
@@ -120,7 +120,7 @@
                 our <a href="../coming-soon.html" id="sponsorship-document-link" class="startup-sponsor-link">sponsorship document</a> 
                  for more details. If interested, complete the interest form below and we will 
                  reach out to you soon! And if you have any remaining questions, please contact 
-                 our Sponsorship and Financials Lead, <a href="WHAT" class="startup-sponsor-link">Gyalpo Dongo</a>.
+                 our Sponsorship and Financials Lead, <a href="../coming-soon.html" class="startup-sponsor-link">Gyalpo Dongo</a>.
             </p>
 
             <a href="../coming-soon.html" class="button-link">
