--- a/first-edition/join-us/index.html
+++ b/first-edition/join-us/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="index.css">
         <title>MIT Entrepreneurship Club - Join Us</title>
         <meta name="description" content="Join MEC!">
-        <link rel="icon" type="image/png" href="MEC airplane.png">
+        <link rel="icon" type="image/png" href="../MEC airplane.png">
     </head>
 
     <body>
