--- a/first-edition/for-members/index.html
+++ b/first-edition/for-members/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="index.css">
         <title>MIT Entrepreneurship Club - For Members</title>
         <meta name="description" content="MEC's Webpage for MEC Members">
-        <link rel="icon" type="image/png" href="MEC airplane.png">
+        <link rel="icon" type="image/png" href="../MEC airplane.png">
     </head>
 
     <body>
